# rollForName

./: CMakeLists.txt  README.md  buildAll.bat
UIs/: CMakeLists.txt
UIs/src/: main.cpp
engine/: CMakeLists.txt
engine/include/rollForName/: CommandLineHelper.h  GameDictionary.h  Generator.h  Logger.h  Parser.h  Paths.h  Random.h  StringHelpers.h  Table.h  TableManager.h  rollForName.h  typedefs.h
engine/rollForName/: GameDictionary.h  Parser.cpp  Parser.h  Random.h  StringHelpers.h  Table.cpp  typedefs.h
engine/src/: CommandLineHelper.cpp  FileUtils.cpp  GameDictionary.cpp  Generator.cpp  Logger.cpp  Parser.cpp  Random.cpp  Table.cpp  TableManager.cpp  rollForName.cpp
res/: Central_Casting.txt
res/generators/: basic fantasy character.rfn  centralCasting.rfn  example generators 2.rfn  example generators.rfn  testGenerator.rfn  variableTest.rfn
res/tables/: Central_Casting2.rfn  basic fantasy character.rfn  example tables 2.rfn  example tables.rfn  fantasy professions.rfn  variableTest.rfn
scripts/: buildEngine.bat  cmakeEngine.bat  moveBinaries.bat
src/: FileUtils.cpp  FileUtils.h  GameDictionary.cpp  Generator.cpp  Generator.h  Logger.cpp  Parser.cpp  Parser.h  Paths.h  Random.h  StringHelpers.h  Table.h  TableManager.cpp  TableManager.h  main.cpp  typedefs.h
tests/: CMakeLists.txt
tests/src/: Test.cpp  Test.h  main.cpp
userScripts/: quick_launch.bat  quick_launch_Interactive.bat
